tests/machine/x/cpp/left_join_multi.error
line 19: ../../../tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘i’ was not declared in this scope
   19 |   decltype(i) item;
      |            ^
../../../tests/machine/x/cpp/left_join_multi.cpp:19:12: error: ‘i’ was not declared in this scope
../../../tests/machine/x/cpp/left_join_multi.cpp: In lambda function:
../../../tests/machine/x/cpp/left_join_multi.cpp:41:53: error: cannot convert ‘__struct3’ to ‘int’ in initialization
   41 |           __items.push_back(__struct4{o.id, c.name, i});
      |                                                     ^
      |                                                     |
      |                                                     __struct3
../../../tests/machine/x/cpp/left_join_multi.cpp:45:53: error: cannot convert ‘__struct3’ to ‘int’ in initialization
   45 |           __items.push_back(__struct4{o.id, c.name, i});
      |                                                     ^
      |                                                     |
      |                                                     __struct3

 18 |   decltype(std::declval<__struct1>().name) name;
 19 |   decltype(i) item;
 20 | };
